IKASAN-2771 see if parallel jobs for unit and integration tests is more efficient